fixed border radius on image on safari

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -32,7 +32,11 @@
   align-self: center;
   justify-content: center;
   overflow: hidden;
-  border-radius:50px;
+}
+
+.about-container__img img{
+  border-radius: 50px;
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 960px) {
